[package]
name = "rust-libp2p-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.30"
libp2p = { version = "0.53.2", features = [
  "dns",
  "tokio",
  "gossipsub",
  "kad",
  "dns",
  "macros",
  "identify",
  "noise",
  "tcp",
  "yamux",
  "rsa",
  "ping",
  "autonat",
  "ping",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.12", features = ["derive"] }
bs58 = "0.5.0"
sha3 = "0.10.8"
